--- a/puptalk/browse.html
+++ b/puptalk/browse.html
@@ -52,7 +52,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                 <nav class="main-nav">
                     <!-- ***** Logo Start ***** -->
                     <a href="index.html" class="logo">
-                        <img src="C:\Users\bendi\Documents\PUP 1-3_1ST TERM\WEBTECH\Sir Ryan\CODES\Portfolio 1\images\gallery\puplogo.png" alt="">
+                        <img src="puptalk\assets\images\logo.png alt="">
                     </a>
                     <!-- ***** Logo End ***** -->
                     <!-- ***** Search End ***** -->
@@ -69,7 +69,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                         <li><a href="browse.html" class="active">Adopt</a></li>
                         <li><a href="details.html">Donations</a></li>
                         <li><a href="streams.html">Shop</a></li>
-                        <li><a href="profile.html">Profile <img src="C:\Users\bendi\Documents\PUP 1-3_1ST TERM\WEBTECH\Sir Ryan\CODES\Portfolio 1\images\gallery\3d-casual-life-young-woman-crossing-her-fingers.png" alt=""></a></li>
+                        <li><a href="profile.html">Profile <img src="puptalk\assets\images\profile.png" alt=""></a></li>
                     </ul>   
                     <a class='menu-trigger'>
                         <span>Menu</span>
@@ -97,7 +97,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                 <div class="owl-features owl-carousel">
                   <div class="item">
                     <div class="thumb">
-                      <img src="C:\Users\bendi\Documents\PUP 1-3_1ST TERM\WEBTECH\Sir Ryan\CODES\Portfolio 1\images\gallery\after\3.png" alt="">
+                      <img src="puptalk\assets\images\after-1.png" alt="">
                       <!-- <div class="hover-effect">
                         <h6>2.4K Streaming</h6>
                       </div> -->
@@ -110,7 +110,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="item">
                     <div class="thumb">
-                      <img src="C:\Users\bendi\Documents\PUP 1-3_1ST TERM\WEBTECH\Sir Ryan\CODES\Portfolio 1\images\gallery\after\2.png" alt="">
+                      <img src="puptalk\assets\images\after-2.png" alt="">
                       <!-- <div class="hover-effect">
                         <h6>2.4K Streaming</h6>
                       </div> -->
@@ -123,7 +123,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="item">
                     <div class="thumb">
-                      <img src="C:\Users\bendi\Documents\PUP 1-3_1ST TERM\WEBTECH\Sir Ryan\CODES\Portfolio 1\images\gallery\after\1.png" alt="">
+                      <img src="puptalk\assets\images\after-3.png" alt="">
                       <!-- <div class="hover-effect">
                         <h6>2.4K Streaming</h6>
                       </div> -->
@@ -144,7 +144,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                 </div>
                 <ul>
                   <li>
-                    <img src="C:\Users\bendi\Documents\PUP 1-3_1ST TERM\WEBTECH\Sir Ryan\CODES\Portfolio 1\images\gallery\after\4.png" alt="" class="templatemo-item">
+                    <img src="puptalk\assets\images\side-1.png" alt="" class="templatemo-item">
                     <h4>Milo</h4>
                     <h6>Male</h6>
                     <!-- <span><i class="fa fa-star" style="color: yellow;"></i> 4.9</span> -->
@@ -154,7 +154,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                     </div>
                   </li>
                   <li>
-                    <img src="C:\Users\bendi\Documents\PUP 1-3_1ST TERM\WEBTECH\Sir Ryan\CODES\Portfolio 1\images\gallery\after\5.png" alt="" class="templatemo-item">
+                    <img src="puptalk\assets\images\side-2.png" alt="" class="templatemo-item">
                     <h4>Cooper</h4>
                     <h6>Male</h6>
                     <!-- <span><i class="fa fa-star" style="color: yellow;"></i> 4.9</span>
@@ -164,7 +164,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                     </div>
                   </li>
                   <li>
-                    <img src="C:\Users\bendi\Documents\PUP 1-3_1ST TERM\WEBTECH\Sir Ryan\CODES\Portfolio 1\images\gallery\after\6.png" alt="" class="templatemo-item">
+                    <img src="puptalk\assets\images\side-3.png" alt="" class="templatemo-item">
                     <h4>Max</h4>
                     <h6>Male</h6>
                     <!-- <span><i class="fa fa-star" style="color: yellow;"></i> 4.9</span>
@@ -192,7 +192,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                 <div class="col-lg-4">
                   <div class="item">
                     <div class="icon">
-                      <img src="C:\Users\bendi\Documents\PUP 1-3_1ST TERM\WEBTECH\Sir Ryan\CODES\Portfolio 1\images\gallery\services\grooming.png" alt="" style="max-width: 60px; border-radius: 50%;">
+                      <img src="puptalk\assets\images\grooming.png" alt="" style="max-width: 60px; border-radius: 50%;">
                     </div>
                     <h4>Grooming</h4>
                     <p>We take care of the pet's grooming needs, from basic to full services.</p>
@@ -201,7 +201,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                 <div class="col-lg-4">
                   <div class="item">
                     <div class="icon">
-                      <img src="C:\Users\bendi\Documents\PUP 1-3_1ST TERM\WEBTECH\Sir Ryan\CODES\Portfolio 1\images\gallery\services\training.png" alt="" style="max-width: 60px; border-radius: 50%;">
+                      <img src="puptalk\assets\images\training.png" alt="" style="max-width: 60px; border-radius: 50%;">
                     </div>
                     <h4>Training</h4>
                     <p>Need help training your furry friend? We can help you get assistance from our personal dog trainers.</p>
@@ -210,7 +210,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                 <div class="col-lg-4">
                   <div class="item">
                     <div class="icon">
-                      <img src="C:\Users\bendi\Documents\PUP 1-3_1ST TERM\WEBTECH\Sir Ryan\CODES\Portfolio 1\images\gallery\services\vaccines.png" alt="" style="max-width: 60px; border-radius: 50%;">
+                      <img src="puptalk\assets\images\vaccines.png" alt="" style="max-width: 60px; border-radius: 50%;">
                     </div>
                     <h4>Vaccinations</h4>
                     <p>Regular veterinary care is important to keep them healthy. Consultations | Physical Examinations | Treatment | Vaccinations</p>
@@ -237,7 +237,7 @@ https://templatemo.com/tm-579-cyborg-gaming
               <div class="col-lg-3 col-sm-6">
                 <div class="item">
                   <div class="thumb">
-                    <img src="C:\Users\bendi\Documents\PUP 1-3_1ST TERM\WEBTECH\Sir Ryan\CODES\Portfolio 1\images\gallery\shop\food.jpg" alt="">
+                    <img src="puptalk\assets\images\petcare-1.jpg" alt="">
                     <div class="hover-effect">
                       <div class="content">
                         <div class="live">
@@ -252,7 +252,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="down-content">
                     <div class="avatar">
-                      <img src="C:\Users\bendi\Documents\PUP 1-3_1ST TERM\WEBTECH\Sir Ryan\CODES\Portfolio 1\images\gallery\shop\1.png" alt="" style="max-width: 46px; border-radius: 50%; float: left;">
+                      <img src="puptalk\assets\images\petcare-logo-1.png" alt="" style="max-width: 46px; border-radius: 50%; float: left;">
                     </div>
                     <h4>Treats</h4>
                   </div> 
@@ -261,7 +261,7 @@ https://templatemo.com/tm-579-cyborg-gaming
               <div class="col-lg-3 col-sm-6">
                 <div class="item">
                   <div class="thumb">
-                    <img src="C:\Users\bendi\Documents\PUP 1-3_1ST TERM\WEBTECH\Sir Ryan\CODES\Portfolio 1\images\gallery\shop\vitamins.jpg" alt="">
+                    <img src="puptalk\assets\images\petcare-2.jpg" alt="">
                     <div class="hover-effect">
                       <div class="content">
                         <div class="live">
@@ -276,7 +276,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="down-content">
                     <div class="avatar">
-                      <img src="C:\Users\bendi\Documents\PUP 1-3_1ST TERM\WEBTECH\Sir Ryan\CODES\Portfolio 1\images\gallery\shop\3.png" alt="" style="max-width: 46px; border-radius: 50%; float: left;">
+                      <img src="puptalk\assets\images\petcare-logo-2.png" alt="" style="max-width: 46px; border-radius: 50%; float: left;">
                     </div>
                     <h4>Vitamins</h4>
                   </div> 
@@ -285,7 +285,7 @@ https://templatemo.com/tm-579-cyborg-gaming
               <div class="col-lg-3 col-sm-6">
                 <div class="item">
                   <div class="thumb">
-                    <img src="C:\Users\bendi\Documents\PUP 1-3_1ST TERM\WEBTECH\Sir Ryan\CODES\Portfolio 1\images\gallery\shop\toys.jpg" alt="">
+                    <img src="puptalk\assets\images\petcare-3.jpg" alt="">
                     <div class="hover-effect">
                       <div class="content">
                         <div class="live">
@@ -300,7 +300,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="down-content">
                     <div class="avatar">
-                      <img src="C:\Users\bendi\Documents\PUP 1-3_1ST TERM\WEBTECH\Sir Ryan\CODES\Portfolio 1\images\gallery\shop\4.png" alt="" style="max-width: 46px; border-radius: 50%; float: left;">
+                      <img src="puptalk\assets\images\petcare-logo-3.png" alt="" style="max-width: 46px; border-radius: 50%; float: left;">
                     </div>
                     <h4>Toys</h4>
                   </div> 
@@ -309,7 +309,7 @@ https://templatemo.com/tm-579-cyborg-gaming
               <div class="col-lg-3 col-sm-6">
                 <div class="item">
                   <div class="thumb">
-                    <img src="C:\Users\bendi\Documents\PUP 1-3_1ST TERM\WEBTECH\Sir Ryan\CODES\Portfolio 1\images\gallery\shop\bath.jpg" alt="">
+                    <img src="puptalk\assets\images\petcare-4.jpg" alt="">
                     <div class="hover-effect">
                       <div class="content">
                         <div class="live">
@@ -324,7 +324,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="down-content">
                     <div class="avatar">
-                      <img src="C:\Users\bendi\Documents\PUP 1-3_1ST TERM\WEBTECH\Sir Ryan\CODES\Portfolio 1\images\gallery\shop\2.png" alt="" style="max-width: 46px; border-radius: 50%; float: left;">
+                      <img src="puptalk\assets\images\petcare-logo-4.png" alt="" style="max-width: 46px; border-radius: 50%; float: left;">
                     </div>
                     <h4>Bath</h4>
                   </div> 
