--- a/puptalk/streams.html
+++ b/puptalk/streams.html
@@ -52,7 +52,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                 <nav class="main-nav">
                     <!-- ***** Logo Start ***** -->
                     <a href="index.html" class="logo">
-                        <img src="C:\Users\bendi\Documents\PUP 1-3_1ST TERM\WEBTECH\Sir Ryan\CODES\Portfolio 1\images\gallery\puplogo.png" alt="">
+                        <img src="puptalk\assets\images\logo.png" alt="">
                     </a>
                     <!-- ***** Logo End ***** -->
                     <!-- ***** Search End ***** -->
@@ -69,7 +69,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                         <li><a href="browse.html">Adopt</a></li>
                         <li><a href="details.html">Donations</a></li>
                         <li><a href="streams.html" class="active">Shop</a></li>
-                        <li><a href="profile.html">Profile <img src="C:\Users\bendi\Documents\PUP 1-3_1ST TERM\WEBTECH\Sir Ryan\CODES\Portfolio 1\images\gallery\3d-casual-life-young-woman-crossing-her-fingers.png" alt=""></a></li>
+                        <li><a href="profile.html">Profile <img src="puptalk\assets\images\profile.png" alt=""></a></li>
                     </ul>   
                     <a class='menu-trigger'>
                         <span>Menu</span>
