--- a/puptalk/index.html
+++ b/puptalk/index.html
@@ -113,7 +113,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                 <div class="row">
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
-                      <img src="C:\Users\bendi\Documents\PUP 1-3_1ST TERM\WEBTECH\Sir Ryan\CODES\Portfolio 1\images\gallery\waiting\1.png" alt="">
+                      <img src="puptalk\assets\images\dog-1.png" alt="">
                       <h4>Cavy<br><span>4 months old</span></h4>
                       <!-- <ul>
                         <li><i class="fa fa-star"></i> 4.8</li>
@@ -123,7 +123,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
-                      <img src="C:\Users\bendi\Documents\PUP 1-3_1ST TERM\WEBTECH\Sir Ryan\CODES\Portfolio 1\images\gallery\waiting\2.png" alt="">
+                      <img src="puptalk\assets\images\dog-2.png" alt="">
                       <h4>Berlin<br><span>6 months old</span></h4>
                       <!-- <ul>
                         <li><i class="fa fa-star"></i> 4.8</li>
@@ -133,7 +133,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
-                      <img src="C:\Users\bendi\Documents\PUP 1-3_1ST TERM\WEBTECH\Sir Ryan\CODES\Portfolio 1\images\gallery\waiting\3.png" alt="">
+                      <img src="puptalk\assets\images\dog-3.png" alt="">
                       <h4>Fluffy<br><span>1 month old</span></h4>
                       <!-- <ul>
                         <li><i class="fa fa-star"></i> 4.8</li>
@@ -143,7 +143,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
-                      <img src="C:\Users\bendi\Documents\PUP 1-3_1ST TERM\WEBTECH\Sir Ryan\CODES\Portfolio 1\images\gallery\waiting\4.png" alt="">
+                      <img src="puptalk\assets\images\dog-4.png" alt="">
                       <h4>Cinder<br><span>2 years old</span></h4>
                       <!-- <ul>
                         <li><i class="fa fa-star"></i> 4.8</li>
@@ -153,7 +153,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
-                      <img src="C:\Users\bendi\Documents\PUP 1-3_1ST TERM\WEBTECH\Sir Ryan\CODES\Portfolio 1\images\gallery\waiting\5.png" alt="">
+                      <img src="puptalk\assets\images\dog-5.png" alt="">
                       <h4>Maru<br><span>2 months old</span></h4>
                       <!-- <ul>
                         <li><i class="fa fa-star"></i> 4.8</li>
@@ -163,7 +163,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                         <div class="col-lg-3 col-sm-6">
                     <div class="item">
-                      <img src="C:\Users\bendi\Documents\PUP 1-3_1ST TERM\WEBTECH\Sir Ryan\CODES\Portfolio 1\images\gallery\waiting\6.png" alt="">
+                      <img src="puptalk\assets\images\dog-6.png" alt="">
                       <h4>Ham<br><span>1 year old</span></h4>
                      <!--  <ul>
                         <li><i class="fa fa-star"></i> 4.8</li>
@@ -173,7 +173,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
-                      <img src="C:\Users\bendi\Documents\PUP 1-3_1ST TERM\WEBTECH\Sir Ryan\CODES\Portfolio 1\images\gallery\waiting\7.png" alt="">
+                      <img src="puptalk\assets\images\dog-7.png" alt="">
                       <h4>Sven<br><span>2 years old</span></h4>
                       <!-- <ul>
                         <li><i class="fa fa-star"></i> 4.8</li>
@@ -183,7 +183,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
-                      <img src="C:\Users\bendi\Documents\PUP 1-3_1ST TERM\WEBTECH\Sir Ryan\CODES\Portfolio 1\images\gallery\waiting\8.png" alt="">
+                      <img src="puptalk\assets\images\dog-8.png" alt="">
                       <h4>Tokyo<br><span>3 years old</span></h4>
                       <!-- <ul>
                         <li><i class="fa fa-star"></i> 4.8</li>
@@ -210,7 +210,7 @@ https://templatemo.com/tm-579-cyborg-gaming
               </div>
               <div class="item">
                 <ul>
-                  <li><img src="C:\Users\bendi\Documents\PUP 1-3_1ST TERM\WEBTECH\Sir Ryan\CODES\Portfolio 1\images\gallery\service dogs\A Family That Heals Together_ Smiley Therapy Dog Works at Children's Hospital Alongside Her Doctor Parents.jpg" alt="" class="templatemo-item"></li>
+                  <li><img src="puptalk\assets\images\service-dog-1.jpg" alt="" class="templatemo-item"></li>
                   <li><h4>Halo</h4><span>4 years old</span></li>
                   <li><h4>Female</h4><span>04/03/2019</span></li>
                   <li><h4>Service</h4><span>3 years</span></li>
@@ -220,7 +220,7 @@ https://templatemo.com/tm-579-cyborg-gaming
               </div>
               <div class="item">
                 <ul>
-                  <li><img src="C:\Users\bendi\Documents\PUP 1-3_1ST TERM\WEBTECH\Sir Ryan\CODES\Portfolio 1\images\gallery\service dogs\Gigantic List of the Top 150 Service Dog Tasks - The Atomic Hound.jpg" alt="" class="templatemo-item"></li>
+                  <li><img src="puptalk\assets\images\service-dog-2.jpg" alt="" class="templatemo-item"></li>
                   <li><h4>Harbor</h4><span>3 years old</span></li>
                   <li><h4>Male</h4><span>10/16/2020</span></li>
                   <li><h4>Service</h4><span>2 years</span></li>
@@ -230,7 +230,7 @@ https://templatemo.com/tm-579-cyborg-gaming
               </div>
               <div class="item last-item">
                 <ul>
-                  <li><img src="C:\Users\bendi\Documents\PUP 1-3_1ST TERM\WEBTECH\Sir Ryan\CODES\Portfolio 1\images\gallery\service dogs\c8d648ee1eba7c9c2059c260fcd1cdcc.jpg" alt="" class="templatemo-item"></li>
+                  <li><img src="puptalk\assets\images\service-dog-3.jpg" alt="" class="templatemo-item"></li>
                   <li><h4>Zane</h4><span>5 years old</span></li>
                   <li><h4>Male</h4><span>02/07/2018</span></li>
                   <li><h4>Service</h4><span>3 years</span></li>
