--- a/puptalk/profile.html
+++ b/puptalk/profile.html
@@ -93,7 +93,7 @@ https://templatemo.com/tm-579-cyborg-gaming
               <div class="main-profile ">
                 <div class="row">
                   <div class="col-lg-4">
-                    <img src="C:\Users\bendi\Documents\PUP 1-3_1ST TERM\WEBTECH\Sir Ryan\CODES\Portfolio 1\images\gallery\Untitled design (1).png" alt="" style="border-radius: 23px;">
+                    <img src="puptalk\assets\images\owner.png" alt="" style="border-radius: 23px;">
                   </div>
                   <div class="col-lg-4 align-self-center">
                     <div class="main-info header-text">
@@ -119,7 +119,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                 <div class="col-lg-4">
                   <div class="item">
                     <div class="icon">
-                      <img src="C:\Users\bendi\Documents\PUP 1-3_1ST TERM\WEBTECH\Sir Ryan\CODES\Portfolio 1\images\gallery\services\grooming.png" alt="" style="max-width: 60px; border-radius: 50%;">
+                      <!-- <img src="C:\Users\bendi\Documents\PUP 1-3_1ST TERM\WEBTECH\Sir Ryan\CODES\Portfolio 1\images\gallery\services\grooming.png" alt="" style="max-width: 60px; border-radius: 50%;"> -->
                     </div>
                     <h4>About Us</h4>
                     <p>Discover the joy of unconditional love by adopting a furry friend from our delightful lineup of lovable dogs. Our website is a haven for dog lovers seeking a faithful companion and for dogs yearning for a forever family.</p>
@@ -128,7 +128,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                 <div class="col-lg-4">
                   <div class="item">
                     <div class="icon">
-                      <img src="C:\Users\bendi\Documents\PUP 1-3_1ST TERM\WEBTECH\Sir Ryan\CODES\Portfolio 1\images\gallery\services\training.png" alt="" style="max-width: 60px; border-radius: 50%;">
+                      <!-- <img src="C:\Users\bendi\Documents\PUP 1-3_1ST TERM\WEBTECH\Sir Ryan\CODES\Portfolio 1\images\gallery\services\training.png" alt="" style="max-width: 60px; border-radius: 50%;"> -->
                     </div>
                     <h4>Why Adopt?</h4>
                     <p>Choosing adoption not only transforms a dog's life but also enriches yours. Experience the joy of giving a second chance to a deserving companion who will fill your days with love, laughter, and endless tail wags.</p>
@@ -137,7 +137,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                 <div class="col-lg-4">
                   <div class="item">
                     <div class="icon">
-                      <img src="C:\Users\bendi\Documents\PUP 1-3_1ST TERM\WEBTECH\Sir Ryan\CODES\Portfolio 1\images\gallery\services\vaccines.png" alt="" style="max-width: 60px; border-radius: 50%;">
+                      <!-- <img src="C:\Users\bendi\Documents\PUP 1-3_1ST TERM\WEBTECH\Sir Ryan\CODES\Portfolio 1\images\gallery\services\vaccines.png" alt="" style="max-width: 60px; border-radius: 50%;"> -->
                     </div>
                     <h4>Support & Resources</h4>
                     <p>We offer resources and tips for pet care, training, and creating a loving environment for your new family member. Our community is here to provide ongoing support as you embark on this wonderful journey together.</p>
