--- a/puptalk/details.html
+++ b/puptalk/details.html
@@ -52,7 +52,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                 <nav class="main-nav">
                     <!-- ***** Logo Start ***** -->
                     <a href="index.html" class="logo">
-                        <img src="puptalk\assets\images\logo.png" alt="">
+                        <img src="puptalk/assets/images/logo.png" alt="">
                     </a>
                     <!-- ***** Logo End ***** -->
                     <!-- ***** Search End ***** -->
@@ -69,7 +69,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                         <li><a href="browse.html">Adopt</a></li>
                         <li><a href="details.html" class="active">Donations</a></li>
                         <li><a href="streams.html">Shop</a></li>
-                        <li><a href="profile.html">Profile <img src="puptalk\assets\images\profile.png" alt=""></a></li>
+                        <li><a href="profile.html">Profile <img src="puptalk/assets/images/profile.png" alt=""></a></li>
                     </ul>   
                     <a class='menu-trigger'>
                         <span>Menu</span>
@@ -93,11 +93,11 @@ https://templatemo.com/tm-579-cyborg-gaming
               <div class="feature-banner header-text">
                 <div class="row">
                   <div class="col-lg-4">
-                    <img src="puptalk\assets\images\activity-1.jpg" alt="" style="border-radius: 23px;">
+                    <img src="puptalk/assets/images/activity-1.jpg" alt="" style="border-radius: 23px;">
                   </div>
                   <div class="col-lg-8">
                     <div class="thumb">
-                      <img src="puptalk\assets\images\activity-2.png" alt="" style="border-radius: 23px;">
+                      <img src="puptalk/assets/images/activity-2.png" alt="" style="border-radius: 23px;">
                     </div>
                   </div>
                 </div>
@@ -116,13 +116,13 @@ https://templatemo.com/tm-579-cyborg-gaming
                 <div class="content">
                   <div class="row">
                     <div class="col-lg-4">
-                      <img src="puptalk\assets\images\special-needs-1.png" alt="" style="border-radius: 23px; margin-bottom: 30px;">
+                      <img src="puptalk/assets/images/special-needs-1.png" alt="" style="border-radius: 23px; margin-bottom: 30px;">
                     </div>
                     <div class="col-lg-4">
-                      <img src="puptalk\assets\images\special-needs-2.png" alt="" style="border-radius: 23px; margin-bottom: 30px;">
+                      <img src="puptalk/assets/images/special-needs-2.png" alt="" style="border-radius: 23px; margin-bottom: 30px;">
                     </div>
                     <div class="col-lg-4">
-                      <img src="puptalk\assets\images\special-needs-3.png" alt="" style="border-radius: 23px; margin-bottom: 30px;">
+                      <img src="puptalk/assets/images/special-needs-3.png" alt="" style="border-radius: 23px; margin-bottom: 30px;">
                     </div>
                     <div>
                         <p>Dear Dog Lover,</p>
@@ -164,7 +164,7 @@ https://templatemo.com/tm-579-cyborg-gaming
               </div>
               <div class="col-lg-6">
                 <div class="item">
-                  <img src="puptalk\assets\images\stray-1.png" alt="" class="templatemo-item">
+                  <img src="puptalk/assets/images/stray-1.png" alt="" class="templatemo-item">
                   <h4>Brownie</h4><span>Friendliness</span>
                   <ul>
                     <li><pre> </pre></li>
@@ -174,7 +174,7 @@ https://templatemo.com/tm-579-cyborg-gaming
               </div>
               <div class="col-lg-6">
                 <div class="item">
-                  <img src="puptalk\assets\images\stray-2.png" alt="" class="templatemo-item">
+                  <img src="puptalk/assets/images/stray-2.png" alt="" class="templatemo-item">
                   <h4>Carrot</h4><span>Friendliness</span>
                   <ul>
                     <li><pre> </pre></li>
@@ -184,7 +184,7 @@ https://templatemo.com/tm-579-cyborg-gaming
               </div>
               <div class="col-lg-6">
                 <div class="item">
-                  <img src="puptalk\assets\images\stray-3.png" alt="" class="templatemo-item">
+                  <img src="puptalk/assets/images/stray-3.png" alt="" class="templatemo-item">
                   <h4>Cookie</h4><span>Friendliness</span>
                   <ul>
                     <li><pre> </pre></li>
@@ -194,7 +194,7 @@ https://templatemo.com/tm-579-cyborg-gaming
               </div>
               <div class="col-lg-6">
                 <div class="item">
-                  <img src="puptalk\assets\images\stray-4.png" alt="" class="templatemo-item">
+                  <img src="puptalk/assets/images/stray-4.png" alt="" class="templatemo-item">
                   <h4>Hash</h4><span>Friendliness</span>
                   <ul>
                     <li><pre> </pre></li>
@@ -204,7 +204,7 @@ https://templatemo.com/tm-579-cyborg-gaming
               </div>
               <div class="col-lg-6">
                 <div class="item">
-                  <img src="puptalk\assets\images\stray-5.png" alt="" class="templatemo-item">
+                  <img src="puptalk/assets/images/stray-5.png" alt="" class="templatemo-item">
                   <h4>Mayi</h4><span>Friendliness</span>
                   <ul>
                     <li><pre> </pre></li>
@@ -214,7 +214,7 @@ https://templatemo.com/tm-579-cyborg-gaming
               </div>
               <div class="col-lg-6">
                 <div class="item">
-                  <img src="puptalk\assets\images\stray-6.png" alt="" class="templatemo-item">
+                  <img src="puptalk/assets/images/stray-6.png" alt="" class="templatemo-item">
                   <h4>Meadow</h4><span>Friendliness</span>
                  <ul>
                     <li><pre> </pre></li>
