--- a/puptalk/streams.html
+++ b/puptalk/streams.html
@@ -52,7 +52,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                 <nav class="main-nav">
                     <!-- ***** Logo Start ***** -->
                     <a href="index.html" class="logo">
-                        <img src="puptalk\assets\images\logo.png" alt="">
+                        <img src="puptalk/assets/images/logo.png" alt="">
                     </a>
                     <!-- ***** Logo End ***** -->
                     <!-- ***** Search End ***** -->
@@ -69,7 +69,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                         <li><a href="browse.html">Adopt</a></li>
                         <li><a href="details.html">Donations</a></li>
                         <li><a href="streams.html" class="active">Shop</a></li>
-                        <li><a href="profile.html">Profile <img src="puptalk\assets\images\profile.png" alt=""></a></li>
+                        <li><a href="profile.html">Profile <img src="puptalk/assets/images/profile.png" alt=""></a></li>
                     </ul>   
                     <a class='menu-trigger'>
                         <span>Menu</span>
@@ -97,7 +97,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                 <div class="owl-features owl-carousel">
                   <div class="item">
                     <div class="thumb">
-                      <img src="puptalk\assets\images\pup-1.jpg" alt="">
+                      <img src="puptalk/assets/images/pup-1.jpg" alt="">
                       <!-- <div class="hover-effect">
                         <h6>2.4K Streaming</h6>
                       </div> -->
@@ -110,7 +110,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="item">
                     <div class="thumb">
-                      <img src="puptalk\assets\images\pup-2.jpg" alt="">
+                      <img src="puptalk/assets/images/pup-2.jpg" alt="">
                       <!-- <div class="hover-effect">
                         <h6>2.4K Streaming</h6>
                       </div> -->
@@ -123,7 +123,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="item">
                     <div class="thumb">
-                      <img src="puptalk\assets\images\pup-3.jpg" alt="">
+                      <img src="puptalk/assets/images/pup-3.jpg" alt="">
                       <!-- <div class="hover-effect">
                         <h6>2.4K Streaming</h6>
                       </div> -->
@@ -136,7 +136,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="item">
                     <div class="thumb">
-                      <img src="puptalk\assets\images\pup-4.png" alt="">
+                      <img src="puptalk/assets/images/pup-4.png" alt="">
                       <!-- <div class="hover-effect">
                         <h6>2.4K Streaming</h6>
                       </div> -->
@@ -149,7 +149,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="item">
                     <div class="thumb">
-                      <img src="puptalk\assets\images\pup-5.png" alt="">
+                      <img src="puptalk/assets/images/pup-5.png" alt="">
                       <!-- <div class="hover-effect">
                         <h6>2.4K Streaming</h6>
                       </div> -->
@@ -162,7 +162,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="item">
                     <div class="thumb">
-                      <img src="puptalk\assets\images\pup-6.png" alt="">
+                      <img src="puptalk/assets/images/pup-6.png" alt="">
                       <!-- <div class="hover-effect">
                         <h6>2.4K Streaming</h6>
                       </div> -->
@@ -183,7 +183,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                 </div>
                 <ul>
                   <li>
-                    <img src="puptalk\assets\images\best-seller-1.png" alt="" class="templatemo-item">
+                    <img src="puptalk/assets/images/best-seller-1.png" alt="" class="templatemo-item">
                     <h4>Natural Ultramix</h4>
                     <h6>Dog Food</h6>
                     <!-- <span><i class="fa fa-star" style="color: yellow;"></i> 4.9</span> -->
@@ -193,7 +193,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                     </div>
                   </li>
                   <li>
-                    <img src="puptalk\assets\images\best-seller-2.png" alt="" class="templatemo-item">
+                    <img src="puptalk/assets/images/best-seller-2.png" alt="" class="templatemo-item">
                     <h4>Mobility Bites</h4>
                     <h6>Vitamins</h6>
                     <!-- <span><i class="fa fa-star" style="color: yellow;"></i> 4.9</span>
@@ -203,7 +203,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                     </div>
                   </li>
                   <li>
-                    <img src="puptalk\assets\images\best-seller-3.png" alt="" class="templatemo-item">
+                    <img src="puptalk/assets/images/best-seller-3.png" alt="" class="templatemo-item">
                     <h4>Natural Pet S&C</h4>
                     <h6>Bath</h6>
                     <!-- <span><i class="fa fa-star" style="color: yellow;"></i> 4.9</span>
@@ -232,7 +232,7 @@ https://templatemo.com/tm-579-cyborg-gaming
               <div class="col-lg-3 col-sm-6">
                 <div class="item">
                   <div class="thumb">
-                    <img src="puptalk\assets\images\shop-1.png" alt="">
+                    <img src="puptalk/assets/images/shop-1.png" alt="">
                     <div class="hover-effect">
                       <div class="content">
                         <div class="live">
@@ -254,7 +254,7 @@ https://templatemo.com/tm-579-cyborg-gaming
               <div class="col-lg-3 col-sm-6">
                 <div class="item">
                   <div class="thumb">
-                    <img src="puptalk\assets\images\shop-2.png" alt="">
+                    <img src="puptalk/assets/images/shop-2.png" alt="">
                     <div class="hover-effect">
                       <div class="content">
                         <div class="live">
@@ -276,7 +276,7 @@ https://templatemo.com/tm-579-cyborg-gaming
               <div class="col-lg-3 col-sm-6">
                 <div class="item">
                   <div class="thumb">
-                    <img src="puptalk\assets\images\shop-3.png" alt="">
+                    <img src="puptalk/assets/images/shop-3.png" alt="">
                     <div class="hover-effect">
                       <div class="content">
                         <div class="live">
@@ -298,7 +298,7 @@ https://templatemo.com/tm-579-cyborg-gaming
               <div class="col-lg-3 col-sm-6">
                 <div class="item">
                   <div class="thumb">
-                    <img src="puptalk\assets\images\shop-4.png" alt="">
+                    <img src="puptalk/assets/images/shop-4.png" alt="">
                     <div class="hover-effect">
                       <div class="content">
                         <div class="live">
@@ -320,7 +320,7 @@ https://templatemo.com/tm-579-cyborg-gaming
               <div class="col-lg-3 col-sm-6">
                 <div class="item">
                   <div class="thumb">
-                    <img src="puptalk\assets\images\shop-5.png" alt="">
+                    <img src="puptalk/assets/images/shop-5.png" alt="">
                     <div class="hover-effect">
                       <div class="content">
                         <div class="live">
@@ -342,7 +342,7 @@ https://templatemo.com/tm-579-cyborg-gaming
               <div class="col-lg-3 col-sm-6">
                 <div class="item">
                   <div class="thumb">
-                    <img src="puptalk\assets\images\shop-6.png" alt="">
+                    <img src="puptalk/assets/images/shop-6.png" alt="">
                     <div class="hover-effect">
                       <div class="content">
                         <div class="live">
@@ -364,7 +364,7 @@ https://templatemo.com/tm-579-cyborg-gaming
               <div class="col-lg-3 col-sm-6">
                 <div class="item">
                   <div class="thumb">
-                    <img src="puptalk\assets\images\shop-7.png" alt="">
+                    <img src="puptalk/assets/images/shop-7.png" alt="">
                     <div class="hover-effect">
                       <div class="content">
                         <div class="live">
@@ -386,7 +386,7 @@ https://templatemo.com/tm-579-cyborg-gaming
              <div class="col-lg-3 col-sm-6">
                 <div class="item">
                   <div class="thumb">
-                    <img src="puptalk\assets\images\shop-8.png" alt="">
+                    <img src="puptalk/assets/images/shop-8.png" alt="">
                     <div class="hover-effect">
                       <div class="content">
                         <div class="live">
